# TinyJS

./: .gitignore  README.md  code_annotation.js  code_generator.py  grammer_rules.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: package_and_upload.yaml
src/tinyjs/: code_generator.py
